--- a/pmaster/docker-assets/etc/supervisor/supervisord.conf
+++ b/pmaster/docker-assets/etc/supervisor/supervisord.conf
@@ -4,15 +4,16 @@ logfile = /var/log/postgresql/supervisord.log
 pidfile = /var/run/supervisor/supervisord.pid
 user = root
 
-[program:cron]
-command = cron -f -L 2
+[program:postgres]
+command = /usr/local/bin/postgres.sh
 autostart = true
 autorestart = true
 stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
+user = postgres
 
-[program:postgres]
-command = /usr/local/bin/postgres.sh
+[program:postgresdump]
+command = /usr/local/bin/datadump.sh
 autostart = true
 autorestart = true
 stdout_logfile = /dev/stdout
