--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 
-version: '2'
+version: '3'
 
 services:
   master:
@@ -10,14 +10,13 @@ services:
         HOST: master
     expose:
       - 5432
+    ports:
+      - "5432:5432"
     links:
       - standby
     env_file: ./master.env
     environment:
       - HOST=master
-    networks:
-      postgresnet:
-        ipv4_address: 172.25.0.2
 
   standby:
     build: 
@@ -27,16 +26,8 @@ services:
         HOST: standby
     expose:
       - 5432
+    ports:
+      - "5431:5432"
     env_file: ./standby.env
     environment:
       - HOST=standby
-    networks:
-      postgresnet:
-        ipv4_address: 172.25.0.3
-
-networks:
-  postgresnet:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 172.25.0.0/24
