--- a/postgres-files/master-conf/postgresql.conf
+++ b/postgres-files/master-conf/postgresql.conf
@@ -56,7 +56,7 @@ external_pid_file = '/var/run/postgresql/9.4-main.pid'			# write an extra PID fi
 
 # - Connection Settings -
 
-#listen_addresses = 'localhost'		# what IP address(es) to listen on;
+listen_addresses = '*'		# what IP address(es) to listen on;
 					# comma-separated list of addresses;
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
@@ -168,7 +168,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 # - Settings -
 
-#wal_level = minimal			# minimal, archive, hot_standby, or logical
+wal_level = hot_standby			# minimal, archive, hot_standby, or logical
 					# (change requires restart)
 #fsync = on				# turns forced synchronization on or off
 #synchronous_commit = on		# synchronization level;
@@ -199,9 +199,9 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 # - Archiving -
 
-#archive_mode = off		# allows archiving to be done
+archive_mode = on		# allows archiving to be done
 				# (change requires restart)
-#archive_command = ''		# command to use to archive a logfile segment
+archive_command = 'cp %p /var/wal/%f'		# command to use to archive a logfile segment
 				# placeholders: %p = path of file to archive
 				#               %f = file name only
 				# e.g. 'test ! -f /mnt/server/archivedir/%f && cp %p /mnt/server/archivedir/%f'
@@ -217,9 +217,9 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 # Set these on the master and on any standby that will send replication data.
 
-#max_wal_senders = 0		# max number of walsender processes
+max_wal_senders = 5	# max number of walsender processes
 				# (change requires restart)
-#wal_keep_segments = 0		# in logfile segments, 16MB each; 0 disables
+wal_keep_segments = 32		# in logfile segments, 16MB each; 0 disables
 #wal_sender_timeout = 60s	# in milliseconds; 0 disables
 
 #max_replication_slots = 0	# max number of replication slots
