--- a/postgres-files/standby-conf/postgresql.conf
+++ b/postgres-files/standby-conf/postgresql.conf
@@ -56,7 +56,7 @@ external_pid_file = '/var/run/postgresql/9.4-main.pid'			# write an extra PID fi
 
 # - Connection Settings -
 
-#listen_addresses = 'localhost'		# what IP address(es) to listen on;
+listen_addresses = '*'		# what IP address(es) to listen on;
 					# comma-separated list of addresses;
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
@@ -238,7 +238,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 # These settings are ignored on a master server.
 
-#hot_standby = off			# "on" allows queries during recovery
+hot_standby = on			# "on" allows queries during recovery
 					# (change requires restart)
 #max_standby_archive_delay = 30s	# max delay before canceling queries
 					# when reading WAL from archive;
